@@ -1,10 +1,0 @@
-bitv.cmi :
-bitv_string.cmi :
-bitv.cmo : bitv.cmi
-bitv.cmx : bitv.cmi
-bitv_string.cmo : bitv_string.cmi
-bitv_string.cmx : bitv_string.cmi
-sieve.cmo : bitv_string.cmi
-sieve.cmx : bitv_string.cmx
-test.cmo : bitv.cmi
-test.cmx : bitv.cmx
