@@ -1,5 +1,0 @@
-name = "bitv"
-version = "@PACKAGE_VERSION@"
-description = "A bit vector library"
-archive(byte) = "bitv.cmo"
-archive(native) = "bitv.cmx"
