@@ -1,0 +1,26 @@
+##########################################################################
+#                                                                        #
+#  Copyright (C) Jean-Christophe Filliatre                               #
+#                                                                        #
+#  This software is free software; you can redistribute it and/or        #
+#  modify it under the terms of the GNU Library General Public           #
+#  License version 2, with the special exception on linking              #
+#  described in file LICENSE.                                            #
+#                                                                        #
+#  This software is distributed in the hope that it will be useful,      #
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of        #
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.                  #
+#                                                                        #
+##########################################################################
+
+all:
+	dune build
+
+test:
+	dune runtest
+
+doc:
+	dune build @doc
+
+clean:
+	dune clean
