@@ -1,154 +1,0 @@
-##########################################################################
-#                                                                        #
-#  Copyright (C) Jean-Christophe Filliatre                               #
-#                                                                        #
-#  This software is free software; you can redistribute it and/or        #
-#  modify it under the terms of the GNU Library General Public           #
-#  License version 2, with the special exception on linking              #
-#  described in file LICENSE.                                            #
-#                                                                        #
-#  This software is distributed in the hope that it will be useful,      #
-#  but WITHOUT ANY WARRANTY; without even the implied warranty of        #
-#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.                  #
-#                                                                        #
-##########################################################################
-
-# the script generated by autoconf from this input will set the following
-# variables:
-#   OCAMLC        "ocamlc" if present in the path, or a failure
-#                 or "ocamlc.opt" if present with same version number as ocamlc
-#   OCAMLOPT      "ocamlopt" (or "ocamlopt.opt" if present), or "no"
-#   OCAMLBEST     either "byte" if no native compiler was found,
-#                 or "opt" otherwise
-#   OCAMLDEP      "ocamldep"
-#   OCAMLLEX      "ocamllex"
-#   OCAMLYACC     "ocamlyac"
-#   OCAMLLIB      the path to the ocaml standard library
-#   OCAMLVERSION  the ocaml version number
-#   OCAMLWEB      "ocamlweb" (not mandatory)
-
-# check for one particular file of the sources
-# ADAPT THE FOLLOWING LINE TO YOUR SOURCES!
-AC_INIT(bitv.mli, 1.2)
-
-# Check for Ocaml compilers
-
-# we first look for ocamlc in the path; if not present, we fail
-AC_CHECK_PROG(OCAMLC,ocamlc,ocamlc,no)
-if test "$OCAMLC" = no ; then
-	AC_MSG_ERROR(Cannot find ocamlc.)
-fi
-
-# we extract Ocaml version number and library path
-OCAMLVERSION=`$OCAMLC -v | sed -n -e 's|.*version* *\(.*\)$|\1|p' `
-echo "ocaml version is $OCAMLVERSION"
-OCAMLLIB=`$OCAMLC -v | tail -1 | cut -f 4 -d " "`
-echo "ocaml library path is $OCAMLLIB"
-
-# then we look for ocamlopt; if not present, we issue a warning
-# if the version is not the same, we also discard it
-# we set OCAMLBEST to "opt" or "byte", whether ocamlopt is available or not
-AC_CHECK_PROG(OCAMLOPT,ocamlopt,ocamlopt,no)
-OCAMLBEST=byte
-if test "$OCAMLOPT" = no ; then
-	AC_MSG_WARN(Cannot find ocamlopt; bytecode compilation only.)
-else
-	AC_MSG_CHECKING(ocamlopt version)
-	TMPVERSION=`$OCAMLOPT -v | sed -n -e 's|.*version* *\(.*\)$|\1|p' `
-	if test "$TMPVERSION" != $OCAMLVERSION ; then
-	    AC_MSG_RESULT(differs from ocamlc; ocamlopt discarded.)
-	    OCAMLOPT=no
-	else
-	    AC_MSG_RESULT(ok)
-	    OCAMLBEST=opt
-	fi
-fi
-
-# checking for ocamlc.opt
-AC_CHECK_PROG(OCAMLCDOTOPT,ocamlc.opt,ocamlc.opt,no)
-if test "$OCAMLCDOTOPT" != no ; then
-	AC_MSG_CHECKING(ocamlc.opt version)
-	TMPVERSION=`$OCAMLCDOTOPT -v | sed -n -e 's|.*version* *\(.*\)$|\1|p' `
-	if test "$TMPVERSION" != $OCAMLVERSION ; then
-	    AC_MSG_RESULT(differs from ocamlc; ocamlc.opt discarded.)
-	else
-	    AC_MSG_RESULT(ok)
-	    OCAMLC=$OCAMLCDOTOPT
-	fi
-fi
-
-# checking for ocamlopt.opt
-if test "$OCAMLOPT" != no ; then
-    AC_CHECK_PROG(OCAMLOPTDOTOPT,ocamlopt.opt,ocamlopt.opt,no)
-    if test "$OCAMLOPTDOTOPT" != no ; then
-	AC_MSG_CHECKING(ocamlc.opt version)
-	TMPVER=`$OCAMLOPTDOTOPT -v | sed -n -e 's|.*version* *\(.*\)$|\1|p' `
-	if test "$TMPVER" != $OCAMLVERSION ; then
-	    AC_MSG_RESULT(differs from ocamlc; ocamlopt.opt discarded.)
-	else
-	    AC_MSG_RESULT(ok)
-	    OCAMLOPT=$OCAMLOPTDOTOPT
-	fi
-    fi
-fi
-
-# ocamldep, ocamllex and ocamlyacc should also be present in the path
-AC_CHECK_PROG(OCAMLDEP,ocamldep,ocamldep,no)
-if test "$OCAMLDEP" = no ; then
-	AC_MSG_ERROR(Cannot find ocamldep.)
-fi
-
-AC_CHECK_PROG(OCAMLLEX,ocamllex,ocamllex,no)
-if test "$OCAMLLEX" = no ; then
-	AC_MSG_ERROR(Cannot find ocamllex.)
-fi
-
-AC_CHECK_PROG(OCAMLYACC,ocamlyacc,ocamlyacc,no)
-if test "$OCAMLYACC" = no ; then
-	AC_MSG_ERROR(Cannot find ocamlyacc.)
-fi
-
-AC_CHECK_PROG(OCAMLWEB,ocamlweb,ocamlweb,true)
-
-# ocamlfind
-AC_CHECK_PROG(USEOCAMLFIND,ocamlfind,yes,no)
-
-if test "$USEOCAMLFIND" = yes; then
-   OCAMLFINDLIB=$(ocamlfind printconf stdlib)
-   OCAMLFIND=$(which ocamlfind)
-   if test "$OCAMLFINDLIB" != "$OCAMLLIB"; then
-   USEOCAMLFIND=no;
-   echo "but your ocamlfind is not compatible with your ocamlc:"
-   echo "ocamlfind : $OCAMLFINDLIB, ocamlc : $OCAMLLIB"
-   fi
-fi
-
-if test "$LIBDIR" = ""; then
-   if test "$USEOCAMLFIND" = yes; then
-        LIBDIR=$(ocamlfind printconf destdir)/bitv
-   else
-        LIBDIR=$OCAMLLIB/bitv
-   fi
-fi
-echo "Bitv library will be installed in: $LIBDIR"
-
-
-# substitutions to perform
-AC_SUBST(OCAMLC)
-AC_SUBST(OCAMLOPT)
-AC_SUBST(OCAMLDEP)
-AC_SUBST(OCAMLLEX)
-AC_SUBST(OCAMLYACC)
-AC_SUBST(OCAMLBEST)
-AC_SUBST(OCAMLVERSION)
-AC_SUBST(OCAMLLIB)
-AC_SUBST(OCAMLWEB)
-AC_SUBST(OCAMLFIND)
-AC_SUBST(USEOCAMLFIND)
-AC_SUBST(LIBDIR)
-AC_SUBST(PACKAGE_VERSION)
-
-AC_CONFIG_FILES(META Makefile)
-AC_OUTPUT
-chmod a-w Makefile
-chmod a-w META
