@@ -1,0 +1,3 @@
+(lang dune 2.0)
+(name bitv)
+(formatting (enabled_for dune))
