@@ -1,19 +1,0 @@
-opam-version: "1.2"
-name: "bitv"
-maintainer: "filliatr@lri.fr"
-authors: "Jean-Christophe Filliâtre"
-homepage: "https://www.lri.fr/~filliatr/software.en.html"
-dev-repo: "https://github.com/backtracking/bitv.git"
-bug-reports: "https://github.com/backtracking/bitv/issues"
-license: "LGPL v2"
-build: [
-  ["autoconf"]
-  ["./configure"]
-  [make]
-]
-install: [make "install"]
-remove: ["ocamlfind" "remove" "bitv"]
-depends: [
-  "ocamlfind"
-  "conf-autoconf" {build}
-]
