@@ -1,3 +1,6 @@
+unreleased
+=======================
+  o switch to dune build system, and opam 2.0
 
 version 1.3, 14/12/2017
 =======================
